fix(Menu): Fixed persistent Hamburger menu on desktop. Abstracted hide on mobile breakpoint className to two global css properties instead, d-not-mobile & d-only-mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,3 +26,15 @@ body.dots {
 @-ms-viewport {
   width: device-width;
 }
+
+.d-not-mobile {
+	@media (max-width: 48em) {
+		display: none !important;
+	}
+}
+
+.d-only-mobile {
+	@media (min-width: 48em) {
+		display: none !important;
+	}
+}
